# rpiEncoderController

./: NOTES  README  REQ_encToJackClient  build.sh  rpienv.sh
encoderController/: CMakeLists.txt  encoderControllerMain.c  jackMidiClient.c  jackMidiClient.h  jackMidiOutClient.c  jackMidiOutClient.h  rotaryEncoderClient.c  rotaryEncoderClient.h
